Introduzione creata, tutte le classi sistemate, richiesto l'inserimento del testo

--- a/src/MessagesBundle.properties
+++ b/src/MessagesBundle.properties
@@ -1,6 +1,9 @@
 
 # TRADUZIONE ITA
 
+scelta = SISTEMA - Scegli inserendo il numero corrispondente per proseguire...
+notallowed = SISTEMA - Numerazione definita in precedenza, non sono autorizzati numeri maggiori!
+
 #Dialoghi con il giocatore
 Dialog1=Un esplosione rompe il silenzio della stanza, mi sveglio di colpo!
 Dialog2=Cos'è successo? Non mi ricordo più chi sono! Come mi chiamo?
@@ -27,10 +30,52 @@ move = Ti muovi, ma non sai in che direzione stai andando!
 go = Dove?
 look = Guarda - Osserva la stanza attorno a te.
 move/go =Move/Go - Ti muovi in una direzione
-Kill = Termina tutto
+kill = Termina tutto
 
-# Player.Java
+# setting.Player.Java
 Player1 = Che oggetto?
 Player2 = Attualmente nello Zaino ho:
 
 default = Non ho capito cosa vuoi fare!
+
+# INTRODUZIONE
+
+# Prima stanza: "Camera da letto"
+
+introdialog1 = Un esplosione rompe il silenzio della stanza, mi sveglio di colpo!
+introdialog2 = Cos'è successo? Non mi ricordo più chi sono! Come mi chiamo?
+introdialogname1 = Ora ricordo sono
+introdialogname2 = come ho fatto a dimenticarlo non lo so proprio!
+introdialog4 = Ma quel botto cos'era? Adesso andrò a controllare cosa è successo, ma prima...
+
+playeractionsci1 = 1. Mi devo vestire...
+playeractionsci2 = 2. Non ricordo molto, dove sono...
+playeractionsci3 = 3. Cosa è successo fuori, fammi guardare...
+playeractionsci4 = 4. Che giorno è oggi? ...
+playeractionsci5 = 5. Non ricordo il mio aspetto! C'è uno specchio...
+playeractionsci6 = 6. Mi sembra di aver fatto tutto posso andare...
+
+dialogoutfits1 = Mi alzo dal letto, l'armadio è già aperto...
+dialogoutfits2 = È tutto ben riposto nell'armadio, cosa indosso ...
+dialogoutfits3 = Metterò
+dialogoutfits4 = . Ho deciso!
+
+dialogroombed1 = Non vedo bene è molto buio, ma ricordo bene la mia camera da letto, le pareti dipinte di...
+dialogroombed2 = Le pareti
+dialogroombed3 =, il mio colore preferito, questi mobili moderni...
+dialogroombed4 = Già da qui vedo la luce del bagno accesa, mi sarò addormentato ancora prima di finire di prepararmi.
+
+dialogwindowint1 = Non vedo nulla è troppo buio fuori!
+
+dialogscageplayerint1 = Quanti anni ho...
+dialogscageplayerint2 = Ora ricordo ne ho
+dialogscageplayerint3 = !
+dialogscageplayerint4 = hh
+dialogscageplayerint5 = hh
+
+dialogaspectint1 = Entro a spegnere la luce del bagno e vedo lo specchio, mi guardo ora si mi sembra di ricordare, un corpo /USER INPUT/.
+dialogaspectint2 = ho gli occhi azzurri, proprio come mia madre!
+dialogaspectint3 =
+dialogaspectint4 = Si sono proprio io!
+
+# Seconda stanza: "Soggiorno"
