--- a/src/MessagesBundle_en_US.properties
+++ b/src/MessagesBundle_en_US.properties
@@ -31,4 +31,9 @@ Description4 = Actually, it bears an eerie resembalance to the previous room, be
 #ROOM 3
 Description5 = The room is very similar to the last room you were in. Empty, with striped wallpaper adorning the walls.
 Description6 = Upon further inspection, you cant find a single difference. Even the cobwebs on the walls and ceiling seem the same. Very strange.
+go=
+move=
+look=
+introdialog1=
+introdialog2=
 
