--- a/src/MessagesBundle.properties
+++ b/src/MessagesBundle.properties
@@ -127,3 +127,7 @@ introdialog39 = "Chi può rimanga in casa, il Governo sta già schierando numerose
 introdialog40 = "Dicono, che a partire da domani la città sarà sicura. "
 introdialog41 = "Detto questo passiamo alle altre notizie, ...."
 introdialog42 = Sarà meglio guardarmi intorno, devo capire cosa mi è successo...
+
+# KEY CAPITOLO 1
+ch1START = Capitolo uno,
+
